<resources>
    <string name="app_name">projeto desenvolvimento mobile - unc</string>
    <string name="accessibility_logo">Logo do projeto</string>
    <string name="accessibility_company">Icone de empresa</string>
    <string name="accessibility_clients">Icone de todos os clientes da plataforma</string>
    <string name="accessibility_services">Icone dos serviços ofertados pela empresa</string>
    <string name="accessibility_contact">Icone de contato</string>
    <string name="client_details">Nossos clientes</string>

    <!-- clients -->
    <string name="appbar_client">Clientes</string>
    <string name="accessibility_client_detail">Logo para os clientes caminhando.</string>
    <string name="accessibility_client1">Sysadmin é um grande cliente.</string>
    <string name="accessibility_client2">RSM é outro grande cliente.</string>
    <string name="client1">Sys é nosso primeiro grande cliente que iremos utilizar para nossa aula.</string>
    <string name="client2">RSM é nosso segundo grande cliente que iremos utilizar para nossa aula.</string>

    <!-- contact -->
    <string name="appbar_contact">Contato</string>

    <!-- services -->
    <string name="appbar_services">Serviços</string>
    <string name="accessibility_details_services">Imagem para detalhes dos serviços</string>
    <string name="services_title">Nossos serviços</string>
    <string name="hint_name">Insira seu nome</string>
    <string name="name_field">Nome</string>
    <string name="hint_email">Insira seu email de contato</string>
    <string name="email_field">E-mail</string>
    <string name="accessibility_name">Campo de texto para informar seu nome para identificação</string>
    <string name="accessibility_email">Campo de texto para informar seu email para que entre-mos contato</string>
    <string-array name="spinner_options">
        <item>Selecione um serviço</item>
        <item>Orçamento</item>
        <item>Parceria</item>
        <item>Contato</item>
        <item>Curiosidade</item>
    </string-array>
    <string name="hint_obs">Objetivo de contato.</string>
    <string name="accessibility_obs">Campo de texto para informar seu objetivo de contato.</string>
    <string name="btn_send_service">Enviar</string>

    <!-- login -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Cadastro</string>
    <string name="welcome">"Bem-vindo !"</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">A senha precisa de no minimo 5 caracteres</string>
    <string name="invalid_name">O nome precisa ser maior que 2 caracteres</string>
    <string name="login_failed">"Falha ao efetuar login"</string>


    <!-- company -->
    <string name="appbar_company">Empresa</string>

</resources>